# ais-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  azure.yaml  pyproject.toml
.github/workflows/: ci.yml
ai_demo/: README.md  ai_gateway_call.py  model_router_decisions.py  per_user_cost_attribution.py
ai_demo/apim/: per-user-cost-attribution.policy.xml
ai_gateway_extras/: README.md  ai_gateway_call.py  model_router_decisions.py  per_user_cost_attribution.py
ai_gateway_extras/kql/: chargeback.kql  token-monitoring.kql
apim/policies/: README.md  aoai-api.policy.xml  permits-api.direct.xml  permits-api.logicapp.xml  permits-api.policy.xml
data/: demo_questions.md  sample_permit.json
docs/: architecture.md  demo-track.md  deployment-guide.md  production-path.md
docs/diagrams/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
functionapp/: README.md  function_app.py  host.json  local.settings.json.example  requirements.txt
infra/: main.bicep  main.bicepparam
infra/modules/: apim.bicep  documentintelligence.bicep  eventgrid.bicep  functionapp.bicep  identity.bicep  logicapp.bicep  monitoring.bicep  openai.bicep  servicebus.bicep
integration/: README.md
integration/eventgrid/: subscriptions.json
integration/logicapp/: permit-intake-workflow.json
scripts/: README.md  app.sh  get_token.sh  run_demo.sh  run_local.sh  seed_permits.py  setup.sh
src/ais_demo/: README.md  __init__.py  orchestrator.py
src/ais_demo/api/: __init__.py  main.py
src/ais_demo/api/routes/: health.py  (+1 more)
src/ais_demo/config/: __init__.py  settings.py
src/ais_demo/core/: __init__.py  correlation.py  errors.py  logging.py
src/ais_demo/demo/: __init__.py  run_demo.py
src/ais_demo/integrations/: __init__.py  ai_gateway.py  apim_client.py  crm.py  document_intelligence.py  event_grid.py  monitor.py  service_bus.py
src/ais_demo/schemas/: __init__.py  permit.py
tests/: conftest.py  test_health.py  test_orchestrator.py  test_permits.py
