[project]
name = "ais-demo"
version = "0.1.0"
description = "Azure Integration Services (AIS) customer demo — governed, event-driven permit-intake flow shown two ways: Azure Portal and the Azure SDK for Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AIS Demo Maintainers" }]
keywords = [
    "azure",
    "integration-services",
    "api-management",
    "logic-apps",
    "service-bus",
    "event-grid",
    "azure-functions",
    "azure-ai-foundry",
    "document-intelligence",
]

# Core runtime dependencies (shared application package + FastAPI host).
# All versions are compatible-release pins against the latest stable SDKs.
dependencies = [
    "fastapi~=0.139",
    "uvicorn[standard]~=0.51",
    "pydantic~=2.13",
    "pydantic-settings~=2.14",
    "python-dotenv~=1.0",
    "httpx~=0.28",
    "azure-identity~=1.25",
    "azure-core~=1.41",
    "azure-servicebus~=7.14",
    "azure-ai-documentintelligence~=1.0",
    "azure-eventgrid~=4.22",
    "azure-monitor-query~=2.0",
    "openai~=2.46",
]

[project.optional-dependencies]
# Azure AI Foundry / Agent Framework (optional grounding + agent orchestration).
foundry = [
    "azure-ai-projects~=2.3",
    "agent-framework~=1.11",
]
# Developer tooling.
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "ruff~=0.9",
    "mypy~=1.14",
]

[project.scripts]
ais-demo = "ais_demo.demo.run_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ais_demo"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
packages = ["ais_demo"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
